
03-17-2009: BC - committed version 1.7.25

** Modified rma method to extract information from pmfeature and bgfeature (bgfeature is assumed to contain PM probes only) tables. The qcpmfeature table will not be available for pdInfoBuilder objects on what I call 'version 2.0'.

03-24-2009: B Carvalho - committed versioin 1.7.29

** Several small changes to clean up package

** Added TilingFeatureSet2, read.xysfiles2, read.celfiles2, getNgsColorInfo as an attempt to appropriately handle two colors applications of tiling arrays.

03-25-2009: B Carvalho

** Changes to accommodate sequence methods

03-26-2009: B Carvalho

** Improved NAMESPACE

** Added basicRMA() to interface with RMA C-code

04-02-2009: B Carvalho

** Added affyio to parse CEL files. This is an initial attempt. 'affyio' provides a much faster parser and also allows users to read in CEL.gz files.

04-06-2009: B Carvalho

** list.celfiles() also returns .cel.gz files

04-07-2009: B Carvalho

** Cleaned up code.

04-13-2009: B Carvalho

** Changed read.table to read.delim in getCrlmmSummaries so filenames with white spaces do not break the code.

04-16-2009: B Carvalho

** Removed some unused code

04-24-2009: B Carvalho

** Added getContainer help page

** Added more verbosity to read.xysfiles

04-29-2009: B Carvalho

** Fixed documentation for read.celfiles and read.xysfiles

** Changed error message (when annotation cannot be loaded)

05-07-2009: B Carvalho

** Added C-code to parse XYS files

05-09-2009: B Carvalho

** Fixed sampleNames that was being ignored

** Removed extra ordering for XYS files

05-11-2009: B Carvalho

** Fixed bug with getMetadata2: if user passes a phenoData object,
this would be incorrectly combined with other objects because the
sampleNames were different.

05-21-2009: B Carvalho

** Fixed bug with basicRMA.

07-31-2009: B Carvalho

** Fixed warnings at the C-level

** More strict versions of dependencies